[gd_scene load_steps=2 format=3 uid="uid://0m7rgqejk0sm"]

[ext_resource type="Script" path="res://map/level_menu_ui.gd" id="1_5dpdu"]

[node name="LevelMenuUI" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
script = ExtResource("1_5dpdu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -6.5
offset_right = 64.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2

[node name="SelectLevel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Select Level[/center]"
fit_content = true

[node name="Restart" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Restart[/center]"
fit_content = true

[node name="MainMenu" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Main Menu[/center]"
fit_content = true

[connection signal="gui_input" from="VBoxContainer/SelectLevel" to="." method="_on_select_level_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Restart" to="." method="_on_restart_gui_input"]
[connection signal="gui_input" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_gui_input"]
